# sundog

./: .clang-format  .gitmodules  CMakeLists.txt
assets/: universe.json
assets/data/: stars.json  universe.json
assets/shaders/: billboard.vert  flat.frag  flat.vert  orbit.frag  orbit.vert  partial_orbit.frag  partial_orbit.vert  planet.frag  planet.vert  starfield.frag  starfield.vert  text.frag  text.vert  wireframe.vert
base/: CMakeLists.txt  arg_parser.cc  arg_parser.h  asset_path.cc  asset_path.h  dict.h  file.cc  file.h  font.cc  font.h  font_info.cc  glyph_cache.h  glyph_generator.cc  gui.cc  gui.h  icon_cache.cc  icon_cache.h  image.cc  image.h  mesh.cc  mesh.h  painter.cc  painter.h  rect.h  shader_manager.cc  shader_manager.h  sprite_book.cc  sprite_sheet.cc  sprite_sheet.h  system.cc  system.h  texture_cache.cc  texture_cache.h  tile_batcher.cc  tile_batcher.h  utf8_util.cc  utf8_util.h  window_base.cc  window_base.h
game/: CMakeLists.txt  asset_path.cc  asset_path.h  button_gizmo.cc  button_gizmo.h  camera_controller.cc  camera_controller.h  date_gizmo.cc  date_gizmo.h  file.cc  file.h  font_info.h  game.cc  game.h  game_window.cc  game_window.h  glhelpers.cc  glhelpers.h  glyph_cache.cc  glyph_cache.h  glyph_generator.cc  glyph_generator.h  glyph_image_generator.cc  glyph_image_generator.h  image.h  julian_clock.h  lambert.cc  lambert.h  main.cc  market_item_details_gizmo.cc  market_item_details_gizmo.h  market_snapshot_gizmo.cc  market_snapshot_gizmo.h  mesh.cc  mesh.h  mission_plan_gizmo.cc  mission_plan_gizmo.h  mission_plot.cc  mission_plot.h  mission_plot_gizmo.cc  (+41 more)
tests/: CMakeLists.txt
tests/base/: CMakeLists.txt  gui.cc  test_gui.cc  test_rect.cc
tests/manual/: CMakeLists.txt  test_glyph_generator.cc  test_gui_events.cc  test_gui_layout.cc  test_gui_painter.cc  test_gui_scroll_area.cc  test_gui_text_rotation.cc  test_sprite_sheet.cc
